--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,78 +1,364 @@
+absl-py==1.4.0
+acres==0.3.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-annotated-doc==0.0.4
+aiohttp==3.11.14
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+altair==5.1.1
 annotated-types==0.7.0
-anyio==4.11.0
+anyio==4.9.0
+asgiref==3.7.2
+asttokens==2.2.1
+astunparse==1.6.3
 async-timeout==4.0.3
-attrs==25.4.0
-cachetools==6.2.2
-certifi==2025.11.12
-charset-normalizer==3.4.4
-click==8.3.1
+attrs==25.3.0
+Automat==22.10.0
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautiful==0.0.2
+beautifulsoup4==4.12.2
+blinker==1.9.0
+blis==1.2.0
+build==1.3.0
+cachetools==5.3.0
+catalogue==2.0.10
+catboost==1.2.8
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==2.1.1
+chromadb==1.3.5
+ci-info==0.3.0
+click==8.1.8
+click-didyoumean==0.3.0
+cloudpathlib==0.21.0
+cloudpickle==3.1.1
+cmake==4.0.0
 colorama==0.4.6
-dataclasses-json==0.6.7
-exceptiongroup==1.3.1
-faiss-cpu==1.13.0
-fastapi==0.122.0
-filetype==1.2.0
-frozenlist==1.8.0
-google-ai-generativelanguage==0.9.0
-google-api-core==2.28.1
-google-auth==2.43.0
-googleapis-common-protos==1.72.0
-greenlet==3.2.4
-grpcio==1.76.0
-grpcio-status==1.76.0
-h11==0.16.0
-httpcore==1.0.9
+coloredlogs==15.0.1
+comm==0.1.3
+comtypes==1.3.0
+confection==0.1.5
+configobj==5.0.9
+configparser==7.2.0
+constantly==15.1.0
+contourpy==1.0.6
+cryptography==39.0.2
+cssselect==1.2.0
+cycler==0.11.0
+cymem==2.0.11
+debugpy==1.6.7
+decorator==4.4.2
+defusedxml==0.7.1
+distro==1.9.0
+dj-database-url==3.0.0
+Django==4.2.3
+django-cors-headers==4.7.0
+django-extensions==4.1
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+djoser==2.3.1
+dnspython==2.7.0
+docx2txt==0.9
+durationpy==0.10
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+etelemetry==0.3.1
+exceptiongroup==1.0.4
+executing==1.2.0
+fanstatic==1.5
+fastapi==0.115.12
+filelock==3.9.0
+Flask==3.1.0
+flatbuffers==23.3.3
+fonttools==4.38.0
+frozenlist==1.5.0
+fsspec==2025.5.1
+future==0.18.2
+gast==0.4.0
+gensim==4.3.3
+git-filter-repo==2.47.0
+gitdb==4.0.10
+GitPython==3.1.36
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0rc1
+google-api-python-client==2.170.0
+google-auth==2.17.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==0.4.6
+google-genai==1.16.1
+google-generativeai==0.8.5
+google-pasta==0.2.0
+googleapis-common-protos==1.70.0
+graphviz==0.20.3
+greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+h5py==3.8.0
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.7.1
 httpx==0.28.1
-httpx-sse==0.4.3
-idna==3.11
+huepy==1.2.1
+huggingface-hub==0.32.2
+humanfriendly==10.0
+hyperlink==21.0.0
+idna==3.4
+imageio==2.22.4
+imageio-ffmpeg==0.4.7
+imbalanced-learn==0.13.0
+importlib-metadata==6.8.0
+importlib_resources==6.5.2
+incremental==22.10.0
+iniconfig==1.1.1
+instabot==0.117.0
+ipykernel==6.23.3
+ipython==8.14.0
+isodate==0.6.1
+itemadapter==0.7.0
+itemloaders==1.0.6
+itsdangerous==2.2.0
+jax==0.4.8
+jedi==0.18.2
+Jinja2==3.1.2
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+js==1.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==1.1.0
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+keras==2.12.0
+kiwisolver==1.4.4
+kubernetes==34.1.0
+langchain==0.3.21
+langchain-chroma==1.0.0
 langchain-classic==1.0.0
-langchain-community==0.4.1
 langchain-core==1.1.0
-langchain-google-genai==3.2.0
 langchain-text-splitters==1.0.0
-langgraph==1.0.4
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.5
-langgraph-sdk==0.2.10
-langsmith==0.4.48
-marshmallow==3.26.1
-multidict==6.7.0
-mypy_extensions==1.1.0
+langcodes==3.5.0
+langsmith==0.4.49
+language_data==1.3.0
+libclang==16.0.0
+llvmlite==0.44.0
+looseversion==1.3.0
+lxml==4.9.2
+marisa-trie==1.2.1
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+ml-dtypes==0.0.4
+mmh3==5.2.0
+mock==4.0.3
+MouseInfo==0.1.3
+movieposters==0.0.7
+moviepy==1.0.3
+mpmath==1.3.0
+multidict==6.2.0
+murmurhash==1.0.12
+narwhals==1.40.0
+nest-asyncio==1.5.6
+networkx==3.4.2
+nibabel==5.3.2
+nipype==1.10.0
+nltk==3.9.1
+numba==0.61.2
 numpy==2.2.6
-orjson==3.11.4
-ormsgpack==1.12.0
-packaging==25.0
-propcache==0.4.1
+oauthlib==3.2.2
+ollama==0.4.7
+onnxruntime==1.23.2
+openai==1.82.0
+opencv-python==4.6.0.66
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+opt-einsum==3.3.0
+orjson==3.10.16
+outcome==1.3.0.post0
+overrides==7.7.0
+p==1.4.0
+packaging==24.2
+pandas==1.5.2
+parsel==1.7.0
+parso==0.8.3
+passlib==1.7.4
+pathlib==1.0.1
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pickleshare==0.7.5
+Pillow==9.3.0
+platformdirs==3.8.0
+plotly==6.1.1
+pluggy==1.5.0
+posthog==5.4.0
+preshed==3.0.9
+proglog==0.1.10
+prompt-toolkit==3.0.38
+propcache==0.3.0
+Protego==0.2.1
 proto-plus==1.26.1
-protobuf==6.33.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.12.4
-pydantic-settings==2.12.0
-pydantic_core==2.41.5
-pypdf==6.4.0
-python-dotenv==1.2.1
-python-multipart==0.0.20
-PyYAML==6.0.3
-requests==2.32.5
+protobuf==5.29.4
+prov==2.0.1
+psutil==5.9.5
+psycopg2-binary==2.9.10
+pure-eval==0.2.2
+puremagic==1.28
+pyarrow==13.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio @ file:///C:/Users/Lenovo/Downloads/PyAudio-0.2.11-cp310-cp310-win_amd64.whl
+PyAutoGUI==0.9.54
+pybase64==1.4.2
+pycparser==2.21
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.8.0
+PyDispatcher==2.0.7
+pydot==3.0.4
+pygame==2.1.2
+PyGetWindow==0.0.9
+Pygments==2.15.1
+PyJWT==2.9.0
+pymongo==4.12.0
+Pympler==1.0.1
+PyMsgBox==1.0.9
+PyMuPDF==1.25.4
+pyOpenSSL==23.0.0
+pyparsing==3.0.9
+PyPDF2==3.0.1
+pypdfium2==4.30.1
+pypdflib==0.1a1
+pyperclip==1.9.0
+PyPika==0.48.9
+pypiwin32==223
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+PyRect==0.2.0
+PyScreeze==1.0.1
+pyscript==0.3.3
+PySocks==1.7.1
+pytest==7.2.0
+python-dateutil==2.8.2
+python-dotenv==1.1.0
+python3-openid==3.2.0
+pyttsx3==2.90
+pytweening==1.2.0
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+pywhatkit==5.4
+pywin32==306
+pyxnat==1.6.3
+PyYAML==6.0.2
+pyzmq==25.1.0
+qrcode==7.3.1
+queuelib==1.6.2
+rdflib==6.3.2
+referencing==0.30.2
+regex==2024.11.6
+requests==2.28.1
+requests-file==1.5.1
+requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
-rsa==4.9.1
+responses==0.22.0
+rich==13.5.3
+rpds-py==0.10.3
+rsa==4.9
+safetensors==0.5.3
+schedule==1.1.0
+scikit-learn==1.6.1
+scipy==1.15.3
+Scrapy==2.8.0
+seaborn==0.13.2
+selenium==4.30.0
+service-identity==21.1.0
+shap==0.48.0
+shap2==0.42.0
+shellingham==1.5.4
+simplejson==3.20.1
+six==1.16.0
+sklearn-compat==0.1.3
+slicer==0.0.8
+smart-open==7.1.0
+smmap==5.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.44
-starlette==0.50.0
-tenacity==9.1.2
-typing-inspect==0.9.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-urllib3==2.5.0
-uvicorn==0.38.0
-xxhash==3.6.0
-yarl==1.22.0
-zstandard==0.25.0
+social-auth-app-django==5.4.3
+social-auth-core==4.6.1
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.39
+sqlparse==0.4.4
+srsly==2.5.1
+stack-data==0.6.2
+starlette==0.46.1
+streamlit==1.26.0
+sympy==1.14.0
+tenacity==8.2.3
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.1.1
+thinc==8.3.4
+threadpoolctl==3.6.0
+tk==0.1.0
+tldextract==3.4.0
+tokenizers==0.21.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.67.1
+traitlets==5.9.0
+traits==7.0.2
+transformers==4.52.3
+trio==0.29.0
+trio-websocket==0.12.2
+twilio==9.5.1
+Twisted==22.10.0
+twisted-iocpsupport==1.0.2
+typer==0.9.0
+types-toml==0.10.8.1
+typing_extensions==4.12.2
+tzdata==2023.3
+tzlocal==4.3.1
+uritemplate==4.1.1
+urllib3==1.26.13
+uvicorn==0.34.0
+validators==0.22.0
+w3lib==2.1.1
+wasabi==1.1.3
+watchdog==3.0.0
+watchfiles==1.1.1
+wcwidth==0.2.6
+weasel==0.4.1
+web-browser==0.0.1
+webdriver-manager==4.0.2
+WebOb==1.8.9
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+whitenoise==6.9.0
+wikipedia==1.4.0
+wrapt==1.14.1
+wsproto==1.2.0
+yarl==1.18.3
+zipp==3.17.0
+zope.interface==5.5.2
+zstandard==0.23.0
