--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,24 +1,21 @@
-fastapi==0.115.12
-uvicorn==0.34.0
-pydantic==2.10.6
-starlette==0.46.1
-httpx==0.28.1
-anyio==4.9.0
-h11==0.14.0
-websockets==15.0.1
-uvicorn[standard] 
-
-langchain-community==0.2.0  
-langchain-core==1.1.0
-langchain-text-splitters==1.0.0
-chromadb==1.3.5
-sentence-transformers==2.7.0
-huggingface-hub==0.32.2
-numpy==2.2.6
-
-pypdf                     
-pdfplumber==0.11.6         
-docx2txt==0.9
-Pillow==9.3.0              
-
-python-dotenv==1.1.0       
+fastapi>=0.115.12
+uvicorn>=0.34.0
+pydantic>=2.10.6
+starlette>=0.46.1
+httpx>=0.28.1
+anyio>=4.9.0
+h11>=0.14.0
+websockets>=15.0.1
+uvicorn[standard]
+langchain-community>=0.2.0
+langchain-core>=1.1.0
+langchain-text-splitters>=1.0.0
+chromadb>=1.3.5
+sentence-transformers>=2.7.0
+huggingface-hub>=0.32.2
+numpy>=1.26.0
+pypdf
+pdfplumber>=0.11.6
+docx2txt>=0.9
+Pillow>=9.3.0
+python-dotenv>=1.1.0
