--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -11,11 +11,13 @@ langchain-community>=0.2.0
 langchain-core>=1.1.0
 langchain-text-splitters>=1.0.0
 chromadb>=1.3.5
-sentence-transformers>=2.7.0
+langchain-huggingface>=1.1.0
+python-multipart
+requests>=2.28.1
+python-dotenv>=1.1.0
 huggingface-hub>=0.32.2
 numpy>=1.26.0
 pypdf
 pdfplumber>=0.11.6
 docx2txt>=0.9
 Pillow>=9.3.0
-python-dotenv>=1.1.0
