--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -18,6 +18,7 @@ python-dotenv>=1.1.0
 huggingface-hub>=0.32.2
 numpy>=1.26.0
 pypdf
+sentence-transformers
 pdfplumber>=0.11.6
 docx2txt>=0.9
 Pillow>=9.3.0
