--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,22 +1,21 @@
-fastapi>=0.115.12
-uvicorn[standard]>=0.34.0
-pydantic>=2.10.6
-starlette>=0.46.1
-httpx>=0.28.1
-anyio>=4.9.0
-h11>=0.14.0
-websockets>=15.0.1
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+pydantic>=2.7.0
 python-multipart
-requests>=2.28.1
-python-dotenv>=1.1.0
-langchain-core>=1.1.0
-langchain-community>=0.2.0
-langchain-text-splitters>=1.0.0
-langchain-huggingface>=1.1.0
-huggingface-hub>=0.32.2
-chromadb>=1.3.5
-numpy>=1.26.0
+python-dotenv
+requests
+httpx
+# --- LangChain Ecosystem ---
+langchain-core
+langchain-community
+langchain-text-splitters
+langchain-huggingface
+huggingface-hub
+# --- Vector Database (Critical for Render) ---
+chromadb>=0.5.0
+pysqlite3-binary ; sys_platform == 'linux' 
+# --- Document Loaders ---
 pypdf
-pdfplumber>=0.11.6
-docx2txt>=0.9
-Pillow>=9.3.0
+pdfplumber
+docx2txt
+numpy
